docs/tests/typing/bad/testfile-assign-7.cpp

class S { public: int a; };
class T { public: int b; };
int main() { S s; T t; s = t; }
